[package]
name = "libercoin_p2p"
version = "1.0.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for libercoin, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/libercoin"
keywords = [ "crypto", "libercoin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
bytes = "0.4"
enum_primitive = "0.1"
lmdb-zero = "0.4.4"
net2 = "0.2"
num = "0.1"
rand = "0.5"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }

libercoin_core = { path = "../core", version = "1.0.1" }
libercoin_store = { path = "../store", version = "1.0.1" }
libercoin_util = { path = "../util", version = "1.0.1" }

[dev-dependencies]
libercoin_pool = { path = "../pool", version = "1.0.1" }
