[package]
name = "libercoin_gen_gen"
version = "0.0.1"
edition = "2018"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Utility to automate the generation of Libercoin's genesis block"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/libercoin"
keywords = [ "crypto", "libercoin", "mimblewimble" ]
readme = "README.md"

[[bin]]
name = "gen_gen"
path = "src/bin/gen_gen.rs"

[dependencies]
chrono = "0.4.4"
cuckoo_miner = "1.0.0"
curl = "0.4.19"
libercoin_core = { path = "../../core" }
libercoin_chain = { path = "../../chain" }
libercoin_keychain = { path = "../../keychain" }
libercoin_miner_plugin = "1.0.0"
libercoin_store = { path = "../../store" }
libercoin_util = { path = "../../util" }
libercoin_wallet = { path = "../../wallet" }
rpassword = "2.0.0"
serde_json = "1"

[patch.crates-io]
libercoin_api = { path = "../../api" }
libercoin_core = { path = "../../core" }
libercoin_chain = { path = "../../chain" }
libercoin_keychain = { path = "../../keychain" }
libercoin_util = { path = "../../util" }
libercoin_wallet = { path = "../../wallet" }
